--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "endent": "^2.1.0",
     "eventsource-parser": "^1.0.0",
     "framer-motion": "^4.1.17",
+    "maplibre-gl": "^5.6.1",
     "next": "^15.1.6",
     "react": "^19.0.0-rc.1",
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "^19.0.0-rc.1",
     "react-icons": "^4.9.0",
     "react-is": "^18.0.0",
+    "react-map-gl": "^8.0.4",
     "react-markdown": "^8.0.6",
     "react-router-dom": "^5.3.0",
     "remark-gfm": "^3.0.1",
@@ -43,9 +45,11 @@
   "devDependencies": {
     "@babel/cli": "^7.24.6",
     "@babel/core": "^7.24.6",
+    "@types/maplibre-gl": "^1.14.0",
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "@types/react-map-gl": "^6.1.7",
     "autoprefixer": "^10.4.14",
     "eslint": "8.37.0",
     "eslint-config-next": "^15.1.6",
