--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
 NEXT_PUBLIC_MAPLIBRE_TOKEN=mYq0CEjQ8g54tKz9fpHI
+NEXT_PUBLIC_DB_SERVER = 'pgm-d9j94x30orpwtpwnqo.pgsql.ap-southeast-5.rds.aliyuncs.com'
+NEXT_PUBLIC_DB_DATABASE = 'db-sd-prod-sea'
+NEXT_PUBLIC_DB_SCHEMA = 'public'
+NEXT_PUBLIC_DB_USERNAME = 'yolo'
+NEXT_PUBLIC_DB_PASSWORD = 'yolo123!'
+NEXT_PUBLIC_DB_PORT = '5432'
