--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@testing-library/user-event": "^12.8.3",
     "@uiw/codemirror-theme-tokyo-night": "^4.19.11",
     "@uiw/react-codemirror": "^4.19.11",
+    "@vercel/postgres": "^0.10.0",
     "endent": "^2.1.0",
     "eventsource-parser": "^1.0.0",
     "framer-motion": "^4.1.17",
     "maplibre-gl": "^5.6.1",
     "next": "^15.1.6",
+    "pg": "^8.16.3",
     "react": "^19.0.0-rc.1",
     "react-custom-scrollbars-2": "^4.2.1",
     "react-dom": "^19.0.0-rc.1",
