--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,49 @@
 # Space Detective v2.0 Requirements
 
 # FastAPI and web framework
-fastapi==0.83.0
-uvicorn[standard]==0.17.0
-python-multipart==0.0.5
+fastapi>=0.68.0,<0.84.0
+uvicorn[standard]>=0.15.0,<0.17.0
+python-multipart>=0.0.5
 
 # Database
-asyncpg==0.26.0
-psycopg2-binary==2.9.9
-sqlalchemy[asyncio]==2.0.23
+asyncpg>=0.25.0,<0.27.0
+psycopg2-binary>=2.8.6
+sqlalchemy[asyncio]>=1.4.0
 
 # Vector database and embeddings
-sentence-transformers==2.2.2
-transformers==4.36.2
+sentence-transformers>=2.0.0
+transformers>=4.20.0
 
 # Machine Learning
-scikit-learn==1.3.2
-pandas==2.1.4
-numpy==1.24.4
-joblib==1.3.2
-shap==0.43.0
+scikit-learn>=1.0.0
+pandas>=1.3.0
+numpy>=1.20.0
+joblib>=1.0.0
+shap>=0.40.0
 
 # Geospatial
-h3-py==3.7.6
-folium==0.15.1
+h3-py>=3.7.0
+folium>=0.12.0
 
 # Visualization
-plotly==5.17.0
-matplotlib==3.8.2
-seaborn==0.13.0
+plotly>=5.0.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
 
 # Text processing
-tiktoken==0.5.2
-regex==2023.10.3
+tiktoken>=0.3.0
+regex>=2022.0.0
 
 # Alibaba Cloud (optional)
-dashscope==1.14.1
+dashscope>=1.10.0
 
 # Utilities
-pydantic==2.5.2
-python-dotenv==1.0.0
-aiofiles==23.2.1
+pydantic>=1.8.0
+python-dotenv>=0.19.0
+aiofiles>=0.7.0
 
 # Development
-pytest==7.4.3
-pytest-asyncio==0.21.1
-black==23.11.0
-flake8==6.1.0
+pytest>=6.0.0
+pytest-asyncio>=0.18.0
+black>=22.0.0
+flake8>=4.0.0
