--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ sentence-transformers>=2.0.0
 transformers>=4.0.0,<4.19.0
 
 # Machine Learning
-scikit-learn>=1.0.0
+scikit-learn>=0.24.0,<0.25.0
 pandas>=1.3.0
 numpy>=1.20.0
 joblib>=1.0.0
