--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_DB_SCHEMA = 'public'
 NEXT_PUBLIC_DB_USERNAME = 'yolo'
 NEXT_PUBLIC_DB_PASSWORD = 'yolo123!'
 NEXT_PUBLIC_DB_PORT = '5432'
+NEXT_PUBLIC_CHAT_KEY = 'CHAT_HISTORY'
+NEXT_PUBLIC_CHAT_API = 'http://nlb-u9m9uphyetnnz0eypn.ap-southeast-5.nlb.aliyuncsslbintl.com/api/chat'
